--- a/StudentIO/Pages/SelectionCampaingPages/AddSelectionCampaing.xaml
+++ b/StudentIO/Pages/SelectionCampaingPages/AddSelectionCampaing.xaml
@@ -7,8 +7,52 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ИНФОРМАЦИЯ О КАМПАНИИ">
+    <Grid VerticalAlignment="Center">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-    <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Введите данные новой приемной кампании:" Grid.Column="1" Grid.ColumnSpan="2" Margin="10"
+                   TextWrapping="Wrap" FontWeight="Bold" TextAlignment="Center"/>
+        <TextBlock Text="Дата начала" Grid.Column="1" Grid.Row="1" Margin="10"/>
+        <TextBlock Text="Дата окончания" Grid.Column="1" Grid.Row="2" Margin="10"/>
+        <TextBlock Text="Ответственный сотрудник" Grid.Column="1" Grid.Row="3" Margin="10"/>
+
+        <DatePicker x:Name="dtStartDate" Grid.Column="2" Grid.Row="1" Margin="10" FontSize="18"/>
+        <DatePicker x:Name="dtEndDate" Grid.Column="2" Grid.Row="2" Margin="10" FontSize="18"/>
+        <ComboBox x:Name="cmbxResponsibleEmployee" Grid.Column="2" Grid.Row="3" Margin="10">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <DockPanel Background="{StaticResource DarkBlue}">
+                        <TextBlock Text="{Binding SecondNameEmployee}" DockPanel.Dock="Left" Foreground="{StaticResource PaleWhite}" Margin="2"/>
+                        <TextBlock Text="{Binding FirstNameEmployee}" DockPanel.Dock="Left" Foreground="{StaticResource PaleWhite}" Margin="2"/>
+                        <TextBlock Text="{Binding MiddleNameEmployee}" DockPanel.Dock="Left" Foreground="{StaticResource PaleWhite}" Margin="2"/>
+                        <TextBlock Text="{Binding Login, StringFormat=({0})}" Foreground="{StaticResource PaleWhite}" Margin="2"/>
+                    </DockPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+        <DockPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="4" Margin="5">
+            <Button x:Name="btGoBack" DockPanel.Dock="Left" Click="btGoBack_Click">
+                <Button.Content>
+                    <Image Source="/Resources/arrow.png" Height="20"/>
+                </Button.Content>
+            </Button>
+            <Button x:Name="btConfirm" Content="Сохранить" Click="btConfirm_Click"/>
+        </DockPanel>
+
     </Grid>
 </Page>
